added endpoint for deleting a project
